--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation libs.constraintlayout
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation libs.material.v1130
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
